# AutoManipulateFile

./: CMakeLists.txt  README.md  vcpkg.json
src/: main.cpp  setting.yml
src/ConfigReader/: ConfigReader.cpp  ConfigReader.h
src/ConsolePrinter/: ConsolePrinter.cpp  ConsolePrinter.h
src/YamlComment/: YamlCommentPrinter.cpp  YamlCommentPrinter.h  YamlCommentSaver.cpp  YamlCommentSaver.h
src/configs/: addFile.yml  computers.yml  deleteFile.yml  modifyYaml.yml  testComputer.yml
